force-app/main/default/objects/Deliverable__c/Deliverable__c.object-meta.xml
<CustomObject>
    <description>Grant deliverable milestones for the EXPRESS Data Migration training scenario (Coastie-Ed). SYNTHETIC training object.</description>
    <label>Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>