force-app/main/default/objects/Deliverable__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Financial Report</fullName>
                </value>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
                <value>
                    <fullName>Letter of Intent (LOI)</fullName>
                </value>
                <value>
                    <fullName>Tax Exemption Document</fullName>
                </value>
                <value>
                    <fullName>Final Evaluation</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>